rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__m.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 21,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "obj",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "end": 21,
          "moduleId": 0,
          "properties": [
            {
              "commentStart": 7,
              "end": 12,
              "key": {
                "commentStart": 7,
                "end": 8,
                "moduleId": 0,
                "name": "a",
                "start": 7,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 7,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 11,
                "end": 12,
                "moduleId": 0,
                "raw": "1",
                "start": 11,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              }
            },
            {
              "commentStart": 14,
              "end": 19,
              "key": {
                "commentStart": 14,
                "end": 15,
                "moduleId": 0,
                "name": "b",
                "start": 14,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 14,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 18,
                "end": 19,
                "moduleId": 0,
                "raw": "2",
                "start": 18,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 2.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 6,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 21,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 26,
      "declaration": {
        "commentStart": 26,
        "end": 51,
        "id": {
          "commentStart": 26,
          "end": 32,
          "moduleId": 0,
          "name": "height",
          "start": 26,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 35,
          "elements": [
            {
              "commentStart": 36,
              "end": 47,
              "left": {
                "commentStart": 36,
                "computed": true,
                "end": 44,
                "moduleId": 0,
                "object": {
                  "abs_path": false,
                  "commentStart": 36,
                  "end": 39,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 36,
                    "end": 39,
                    "moduleId": 0,
                    "name": "obj",
                    "start": 36,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 36,
                  "type": "Name",
                  "type": "Name"
                },
                "property": {
                  "commentStart": 40,
                  "end": 43,
                  "moduleId": 0,
                  "raw": "\"a\"",
                  "start": 40,
                  "type": "Literal",
                  "type": "Literal",
                  "value": "a"
                },
                "start": 36,
                "type": "MemberExpression",
                "type": "MemberExpression"
              },
              "moduleId": 0,
              "operator": "-",
              "right": {
                "commentStart": 46,
                "end": 47,
                "moduleId": 0,
                "raw": "1",
                "start": 46,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 1.0,
                  "suffix": "None"
                }
              },
              "start": 36,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            {
              "commentStart": 49,
              "end": 50,
              "moduleId": 0,
              "raw": "0",
              "start": 49,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 0.0,
                "suffix": "None"
              }
            }
          ],
          "end": 51,
          "moduleId": 0,
          "start": 35,
          "type": "ArrayExpression",
          "type": "ArrayExpression"
        },
        "moduleId": 0,
        "start": 26,
        "type": "VariableDeclarator"
      },
      "end": 51,
      "kind": "const",
      "moduleId": 0,
      "start": 26,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 51,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
