rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__o.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 15,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "six",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 6,
          "end": 15,
          "left": {
            "commentStart": 6,
            "end": 11,
            "left": {
              "commentStart": 6,
              "end": 7,
              "moduleId": 0,
              "raw": "1",
              "start": 6,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 1.0,
                "suffix": "None"
              }
            },
            "moduleId": 0,
            "operator": "+",
            "right": {
              "commentStart": 10,
              "end": 11,
              "moduleId": 0,
              "raw": "2",
              "start": 10,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 2.0,
                "suffix": "None"
              }
            },
            "start": 6,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "moduleId": 0,
          "operator": "+",
          "right": {
            "commentStart": 14,
            "end": 15,
            "moduleId": 0,
            "raw": "3",
            "start": 14,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 3.0,
              "suffix": "None"
            }
          },
          "start": 6,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 15,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 15,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
