rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__p.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 16,
        "id": {
          "commentStart": 0,
          "end": 4,
          "moduleId": 0,
          "name": "five",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 7,
          "end": 16,
          "left": {
            "commentStart": 7,
            "end": 12,
            "left": {
              "commentStart": 7,
              "end": 8,
              "moduleId": 0,
              "raw": "3",
              "start": 7,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 3.0,
                "suffix": "None"
              }
            },
            "moduleId": 0,
            "operator": "*",
            "right": {
              "commentStart": 11,
              "end": 12,
              "moduleId": 0,
              "raw": "1",
              "start": 11,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 1.0,
                "suffix": "None"
              }
            },
            "start": 7,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "moduleId": 0,
          "operator": "+",
          "right": {
            "commentStart": 15,
            "end": 16,
            "moduleId": 0,
            "raw": "2",
            "start": 15,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 2.0,
              "suffix": "None"
            }
          },
          "start": 7,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 16,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 16,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
