rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__q.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 24,
        "id": {
          "commentStart": 0,
          "end": 6,
          "moduleId": 0,
          "name": "height",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 9,
          "elements": [
            {
              "commentStart": 11,
              "computed": true,
              "end": 19,
              "moduleId": 0,
              "object": {
                "abs_path": false,
                "commentStart": 11,
                "end": 14,
                "moduleId": 0,
                "name": {
                  "commentStart": 11,
                  "end": 14,
                  "moduleId": 0,
                  "name": "obj",
                  "start": 11,
                  "type": "Identifier"
                },
                "path": [],
                "start": 11,
                "type": "Name",
                "type": "Name"
              },
              "property": {
                "commentStart": 15,
                "end": 18,
                "moduleId": 0,
                "raw": "\"a\"",
                "start": 15,
                "type": "Literal",
                "type": "Literal",
                "value": "a"
              },
              "start": 11,
              "type": "MemberExpression",
              "type": "MemberExpression"
            },
            {
              "commentStart": 21,
              "end": 22,
              "moduleId": 0,
              "raw": "0",
              "start": 21,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 0.0,
                "suffix": "None"
              }
            }
          ],
          "end": 24,
          "moduleId": 0,
          "start": 9,
          "type": "ArrayExpression",
          "type": "ArrayExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 24,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 24,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
