rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__s.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 21,
        "id": {
          "commentStart": 0,
          "end": 4,
          "moduleId": 0,
          "name": "prop",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 7,
          "computed": true,
          "end": 21,
          "moduleId": 0,
          "object": {
            "commentStart": 7,
            "computed": true,
            "end": 16,
            "moduleId": 0,
            "object": {
              "abs_path": false,
              "commentStart": 7,
              "end": 9,
              "moduleId": 0,
              "name": {
                "commentStart": 7,
                "end": 9,
                "moduleId": 0,
                "name": "yo",
                "start": 7,
                "type": "Identifier"
              },
              "path": [],
              "start": 7,
              "type": "Name",
              "type": "Name"
            },
            "property": {
              "commentStart": 10,
              "end": 15,
              "moduleId": 0,
              "raw": "\"one\"",
              "start": 10,
              "type": "Literal",
              "type": "Literal",
              "value": "one"
            },
            "start": 7,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "property": {
            "abs_path": false,
            "commentStart": 17,
            "end": 20,
            "moduleId": 0,
            "name": {
              "commentStart": 17,
              "end": 20,
              "moduleId": 0,
              "name": "two",
              "start": 17,
              "type": "Identifier"
            },
            "path": [],
            "start": 17,
            "type": "Name",
            "type": "Name"
          },
          "start": 7,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 21,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 21,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
