rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__u.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 28,
        "id": {
          "commentStart": 0,
          "end": 4,
          "moduleId": 0,
          "name": "prop",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 7,
          "computed": false,
          "end": 28,
          "moduleId": 0,
          "object": {
            "commentStart": 7,
            "computed": false,
            "end": 23,
            "moduleId": 0,
            "object": {
              "commentStart": 7,
              "computed": false,
              "end": 17,
              "moduleId": 0,
              "object": {
                "commentStart": 7,
                "computed": false,
                "end": 13,
                "moduleId": 0,
                "object": {
                  "abs_path": false,
                  "commentStart": 7,
                  "end": 9,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 7,
                    "end": 9,
                    "moduleId": 0,
                    "name": "yo",
                    "start": 7,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 7,
                  "type": "Name",
                  "type": "Name"
                },
                "property": {
                  "abs_path": false,
                  "commentStart": 10,
                  "end": 13,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 10,
                    "end": 13,
                    "moduleId": 0,
                    "name": "one",
                    "start": 10,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 10,
                  "type": "Name",
                  "type": "Name"
                },
                "start": 7,
                "type": "MemberExpression",
                "type": "MemberExpression"
              },
              "property": {
                "abs_path": false,
                "commentStart": 14,
                "end": 17,
                "moduleId": 0,
                "name": {
                  "commentStart": 14,
                  "end": 17,
                  "moduleId": 0,
                  "name": "two",
                  "start": 14,
                  "type": "Identifier"
                },
                "path": [],
                "start": 14,
                "type": "Name",
                "type": "Name"
              },
              "start": 7,
              "type": "MemberExpression",
              "type": "MemberExpression"
            },
            "property": {
              "abs_path": false,
              "commentStart": 18,
              "end": 23,
              "moduleId": 0,
              "name": {
                "commentStart": 18,
                "end": 23,
                "moduleId": 0,
                "name": "three",
                "start": 18,
                "type": "Identifier"
              },
              "path": [],
              "start": 18,
              "type": "Name",
              "type": "Name"
            },
            "start": 7,
            "type": "MemberExpression",
            "type": "MemberExpression"
          },
          "property": {
            "abs_path": false,
            "commentStart": 24,
            "end": 28,
            "moduleId": 0,
            "name": {
              "commentStart": 24,
              "end": 28,
              "moduleId": 0,
              "name": "four",
              "start": 24,
              "type": "Identifier"
            },
            "path": [],
            "start": 24,
            "type": "Name",
            "type": "Name"
          },
          "start": 7,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 28,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 28,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
